# quay

./: .gitignore  404.html  AGENT.md  DESIGN_ISSUES.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  quay-feature-1-stealth-mode---0fb65541-ceaa-4d15-b8e9-09d88908245f.md  ruff.toml  setup.py  sitemap.xml  task_codex.md  test_block_trackers.py
.github/workflows/: ci.yml  docs.yml
CODE_REVIEW/: index.html
adr/: index.html
adr/0001-accessibility-tree-approach/: index.html
adr/0002-runtime-evaluate-result-structure/: index.html
adr/0003-callfunctionon-this-binding/: index.html
adr/0004-accessibility-node-id/: index.html
adr/0005-nested-async-handling/: index.html
api/browser/: index.html
api/connection/: index.html
api/errors/: index.html
changelog/: index.html
docs/: CODE_REVIEW.md  changelog.md  index.md  installation.md  quickstart.md  roadmap.md
docs/adr/: 0001-accessibility-tree-approach.md  0002-runtime-evaluate-result-structure.md  0003-callfunctionon-this-binding.md  0004-accessibility-node-id.md  0005-nested-async-handling.md  index.md
docs/api/: browser.md  connection.md  errors.md
docs/guides/: benchmarks.md  cookies.md  input.md  multitab.md  network.md  reconnection.md  recording.md  stealth.md  visual-regression.md  wait-conditions.md
docs/internals/: ARCHITECTURE.md  RECONNECT_DESIGN.md  SPEC.md  TESTING_STRATEGY.md
guides/benchmarks/: index.html
guides/cookies/: index.html
guides/input/: index.html
guides/multitab/: index.html
guides/network/: index.html
guides/reconnection/: index.html
guides/recording/: index.html
guides/visual-regression/: index.html
guides/wait-conditions/: index.html
installation/: index.html
internals/ARCHITECTURE/: index.html
internals/RECONNECT_DESIGN/: index.html
internals/SPEC/: index.html
internals/TESTING_STRATEGY/: index.html
quay/: __init__.py  __main__.py  _browser_accessibility.py  _browser_actions.py  _browser_cdp.py  _browser_core.py  _browser_navigation.py  _browser_recording.py  _browser_tabs.py  _browser_wait.py  browser.py  browser_temp_fix.py  cli.py  connection.py  errors.py  evals.py  font_spoof.js  media_spoof.js  models.py  stealth.js  webgl_spoof.js  webrtc_spoof.js
quay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
quickstart/: index.html
roadmap/: index.html
scripts/: chrome-debug.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_accessibility.py  test_actions.py  test_browser.py  test_cli.py  test_connection.py  test_cookie_import_export.py  test_design_fixes.py  test_errors.py  test_escape.py  test_mobile_emulation.py  test_models.py  test_navigation.py  test_persistent_profile.py  test_quay.py  test_recording.py  test_stealth_enhanced.py  test_stealth_timing.py  test_wait.py
