[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quay"
dynamic = ["version"]
description = "Chrome DevTools with accessibility-tree semantics"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Russell Stephens", email = "russell@sidonsoft.com"}
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
quay = "quay.cli:main"

[project.urls]
Homepage = "https://github.com/sidonsoft/quay"
Repository = "https://github.com/sidonsoft/quay"

[tool.setuptools.dynamic]
version = {attr = "quay._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["quay*"]

