[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quay"
dynamic = ["version"]
description = "Chrome DevTools with accessibility-tree semantics"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Russell Stephens", email = "russell@sidonsoft.com"}
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "mypy>=1.0",
]

[project.scripts]
quay = "quay.cli:main"

[project.urls]
Homepage = "https://github.com/sidonsoft/quay"
Repository = "https://github.com/sidonsoft/quay"

[tool.setuptools.dynamic]
version = {attr = "quay._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["quay*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["quay"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
