[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quay"
dynamic = ["version"]
description = "Chrome DevTools with accessibility-tree semantics"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Russell Stephens", email = "russell@sidonsoft.com"}
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.0",
    "ruff>=0.9.0",
    "ty>=0.0.27",
]

[project.scripts]
quay = "quay.cli:main"

[project.urls]
Homepage = "https://github.com/sidonsoft/quay"
Repository = "https://github.com/sidonsoft/quay"

[tool.setuptools.dynamic]
version = {attr = "quay._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["quay*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --timeout=30"

[tool.coverage.run]
source = ["quay"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
  "F",      # pyflakes
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "I",      # isort
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "ASYNC",  # flake8-async
  "SIM",    # flake8-simplicity
  "RUF",    # ruff-specific rules
]
ignore = [
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
  "ASYNC210", # explicit async for concurrency - warn only
]

[tool.ruff.lint.isort]
known-first-party = ["quay"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
version = ">=0.0.27"
